examples/test/testpolicy19075.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19075
  namespace: namespace202
spec:
  podSelector:
    matchLabels:
      key1: value43
      key13: value23
      key4: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value49
          key6: value27
      podSelector:
        matchLabels:
          key15: value16
          key7: value39
          key0: value35
